Fixed footer color in dark mode

--- a/src/includes/style.css
+++ b/src/includes/style.css
@@ -49,6 +49,9 @@ div.content-container {
     .fa {
         color: white !important;
     }
+    .footer p {
+        color: white !important;
+    }
     .footer-link {
         color: white !important;
     }
